--- a/Bootstrap4/conFusion/css/styles.css
+++ b/Bootstrap4/conFusion/css/styles.css
@@ -44,3 +44,18 @@ body{
     border-bottom: 1px solid #dddddd;
     padding: 10px;
 }
+
+.carousel{
+    background: #512da8;
+}
+
+.carousel-item{
+    height: 300px;
+}
+
+.carousel-item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
