--- a/Bootstrap4/conFusion/css/styles.scss
+++ b/Bootstrap4/conFusion/css/styles.scss
@@ -74,3 +74,15 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header{
+    background: $background-dark;
+    color: white;
+    button {
+        color: white;
+    }
+}
+
+.modal-body{
+    background: $background-pale;
+}
